# gushi_ws

src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/my_video_sender/lib/my_video_sender/: image_receiver
src/install/my_video_sender/share/ament_index/resource_index/package_run_dependencies/: my_video_sender
src/install/my_video_sender/share/ament_index/resource_index/parent_prefix_path/: my_video_sender
src/install/my_video_sender/share/my_video_sender/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/my_video_sender/share/my_video_sender/cmake/: my_video_senderConfig-version.cmake  my_video_senderConfig.cmake
src/install/my_video_sender/share/my_video_sender/environment/: ament_prefix_path.dsv  path.dsv
src/install/test_package/lib/test_package/: receiver
src/install/test_package/share/test_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/test_package/share/test_package/cmake/: test_packageConfig-version.cmake  test_packageConfig.cmake
src/install/test_package/share/test_package/environment/: ament_prefix_path.dsv  path.dsv
src/log/: latest_build
src/my_video_sender/: CMakeLists.txt  package.xml
src/my_video_sender/src/: image_processor.c  image_receiver.cpp
src/test_package/: CMakeLists.txt  package.xml
src/test_package/include/: mylib.h
src/test_package/src/: mylib.c  receiver.cpp
(+2 files in other folders)
